# brainreg3D

./: .gitignore  LICENSE  README.md  description.md  example.py  install.ps1  pyproject.toml  requirements.txt
brainreg3D/: __init__.py  __main__.py  brainreg3D.py
resources/: sample_image.tif  sample_image_masks.tif
