[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "brainreg3D"
version = "2024.06.4"
authors = [
  { name="Joe Ricotta", email="ricotta@psu.edu" },
]
description = "A simple pipeline for segmentation of 2D images using 3D atlases. Produces cortical region masks given manual image alignment."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "brainrender==2.1.8", 
    "matplotlib==3.8.4", 
    "numpy==1.23.5", 
    "scikit_learn==1.4.2", 
    "tifffile==2024.2.12", 
    "vedo==2024.5.1"
]

[project.urls]
Homepage = "https://github.com/JoeRicotta/brainreg3D"
Issues = "https://github.com/JoeRicotta/brainreg3D/issues"

[tool.setuptools.packages.find]
include = ["brainreg3D"]